# mcp-network-tool

./: .gitignore  README.md  app.py  check_system.sh  pyproject.toml  requirements.txt  run.sh
postman/: MCP-Network-Tools.postman_collection.json  MCP-Network-Tools.postman_environment.json  README.md
src/: server.py
src/tools/: curl.py  dns.py  netstat.py  nmap.py  ping.py  traceroute.py  whois.py
src/utils/: parsers.py  security.py
