[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-network-tools"
version = "1.0.0"
description = "MCP server providing network diagnostic tools"
authors = [{name = "Network Tools", email = "damien@kerbart.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "validators>=0.20.0",
    "python-whois>=0.8.0",
    "dnspython>=2.4.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0"
]

[project.scripts]
mcp-network-tools = "start_http:main"